Got a working demo!
